--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_packagelist">PackagelistActivity</string>
     <string name="title_activity_package_detail">PackageDetailActivity</string>
     <string name="title_activity_pending_order_list">PendingOrderList</string>
+    <string name="title_activity_order_details">OrderDetails</string>
 
 </resources>
