添加订单备注

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="title_activity_pending_order_list">PendingOrderList</string>
     <string name="title_activity_order_details">OrderDetails</string>
     <string name="title_activity_order_address">OrderAddressActivity</string>
+    <string name="title_activity_order_comment">OrderCommentActivity</string>
 
 </resources>
