--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="title_activity_order_details">OrderDetails</string>
     <string name="title_activity_order_address">OrderAddressActivity</string>
     <string name="title_activity_order_comment">OrderCommentActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_user_profile">UserProfileActivity</string>
 
 </resources>
