完成忘记密码与注册的主要UI响应
未完工作
1. 家里没信号，验证码无法测试
2. 忘记密码个人认为API文档有误，需要参照ios的request更改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="title_activity_user_profile">UserProfileActivity</string>
     <string name="title_activity_forget_password">ForgetPassword</string>
     <string name="title_activity_register_user">RegisterUserActivity</string>
+    <string name="cert_code_button_text">获取密码</string>
 
 </resources>
