--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
     <string name="title_activity_order_coupon">OrderCouponActivity</string>
+    <string name="title_activity_my_coupon">MyCouponActivity</string>
 
 </resources>
