--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,8 @@
     <string name="title_activity_evaluation">EvaluationActivity</string>
     <string name="title_activity_order_status">OrderStatusActivity</string>
 
+
+    <string name="string_format_package_usage">%d人做过</string>
+    <string name="string_format_package_evaluation_count">顾客评价（%d）</string>
+
 </resources>
